<resources>
    <string name="app_name">Fisrt Application</string>
    <string name="welcome_username">Welcome, USERNAME!</string>
    <string name="welcome_name">Welcome, %s!</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_error">Enter a valid email</string>
    <string name="password_error">Enter password longer than 8 characters</string>
    <string name="phone_error">Enter a valid phone</string>
    <string name="name_error">Enter a valid name</string>
    <string name="reg_success">Registered successfully!</string>
    <string name="name_regex">^[A-Za-z]+$</string>
    <string name="name_path">users/%s/name"</string>
    <string name="connection_error">Please check your connection!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="enter_new_email">Enter new email:</string>
    <string name="enter_new_name">Enter new name:</string>
    <string name="vendings">Machines</string>
    <string name="blank">Blank</string>
    <string name="save">save</string>
    <string name="upload_new">Upload image</string>
    <string name="profile_image">profile image</string>
    <string name="failed_load_image">Failed to load image</string>
    <string name="no_image">No image selected</string>
    <string name="upload_in_progress">Upload in progress</string>
    <string name="name_updated">Name updated</string>
    <string name="email_updated">User email address updated.</string>
    <string name="uploading">Uploading</string>
    <string name="ven_details">Vending Details</string>
</resources>
