<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".fragments.ProfileFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/image_profile"
            tools:srcCompat="@tools:sample/avatars[0]"
            android:contentDescription="@string/profile_image" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/new_image_button"
            style="@android:style/Widget.Material.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_margin="7dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/upload_new"
            android:textColor="@android:color/white"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_new_email"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/new_email_button"
            style="@android:style/Widget.Material.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_margin="7dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/save"
            android:textColor="@android:color/white" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_new1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_new"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_new_name"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/new_name_button"
            style="@android:style/Widget.Material.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_margin="7dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/save"
            android:textColor="@android:color/white" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_new1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_new"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/name" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>



</LinearLayout>